# MacPhersonian

./: CMakeLists.txt  uniform_representatives_rank3_5elements.txt
creating_all_oriented_matroids/: OMs.c  OMs.cpp  OMs.h  find_all_OMs.c  lower_cones.c  lower_cones.cpp  translate_Finschi_representatives.c  translate_Finschi_representatives.cpp
finding_fixed_points/: OMs.c  OMs.h  construct_fixed_OMs.c  longer_l.c  short_l.c
